update nav routes

--- a/Back/Frontend/templates/index.html
+++ b/Back/Frontend/templates/index.html
@@ -17,6 +17,11 @@
                         Overview
                     </a>
                 </li>
+                <li>
+                    <a href="/processes" aria-label="View Live Processes">
+                        Live Process
+                    </a>
+                </li>
             </ul>
         </nav>
     </aside>
